--- a/apps/base/monitoring-apcups-exporter/deploy/namespace.yaml
+++ b/apps/base/monitoring-apcups-exporter/deploy/namespace.yaml
@@ -2,3 +2,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: monitoring-apcups-exporter
+  labels:
+    pod-security.kubernetes.io/enforce: restricted
+    pod-security.kubernetes.io/audit: restricted
+    pod-security.kubernetes.io/warn: restricted
