--- a/apps/base/monitoring-blackbox-exporter/deploy/deployment.yaml
+++ b/apps/base/monitoring-blackbox-exporter/deploy/deployment.yaml
@@ -41,6 +41,7 @@ spec:
             cpu: 25m
             memory: 20Mi
         securityContext:
+          allowPrivilegeEscalation: false
           # NET_RAW and root are Required for the icmp module
           capabilities:
             add:
