Configure pod-security for monitoring-kube-state-metrics

--- a/apps/base/monitoring-kube-state-metrics/deploy/deployment.yaml
+++ b/apps/base/monitoring-kube-state-metrics/deploy/deployment.yaml
@@ -126,4 +126,7 @@ spec:
         runAsNonRoot: true
         runAsGroup: 65532
         runAsUser: 65532
+        fsGroupChangePolicy: "OnRootMismatch"
+        seccompProfile:
+          type: RuntimeDefault
       serviceAccountName: kube-state-metrics
