--- a/apps/base/monitoring-nginx-exporter/deploy/daemonSet.yaml
+++ b/apps/base/monitoring-nginx-exporter/deploy/daemonSet.yaml
@@ -13,6 +13,13 @@ spec:
         app.kubernetes.io/name: nginx-exporter
         app.kubernetes.io/component: nginx-exporter
     spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1000 # random uid
+        fsGroup: 1000
+        fsGroupChangePolicy: "OnRootMismatch"
+        seccompProfile:
+          type: RuntimeDefault
       containers:
       - name: nginx-exporter
         image: registry.lan/nginx-prometheus-exporter:0.11.0
@@ -29,9 +36,11 @@ spec:
             fieldRef:
               fieldPath: status.hostIP
         securityContext:
-          runAsNonRoot: true
-          runAsUser: 1000 # random uid
           readOnlyRootFilesystem: true
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+              - ALL
         readinessProbe:
           httpGet:
             scheme: HTTP
