--- a/apps/base/monitoring-nginx-log-exporter/deploy/daemonSet.yaml
+++ b/apps/base/monitoring-nginx-log-exporter/deploy/daemonSet.yaml
@@ -15,6 +15,9 @@ spec:
         app.kubernetes.io/name: nginx-log-exporter
         app.kubernetes.io/component: nginx-log-exporter
     spec:
+      securityContext:
+        seccompProfile:
+          type: RuntimeDefault
       containers:
       - name: nginx-log-exporter
         image: registry.lan/nginxlog-exporter:v1.10.0-amd64
