Configure pod-security for monitoring-node-exporter

--- a/apps/base/monitoring-node-exporter/deploy/daemonSet.yaml
+++ b/apps/base/monitoring-node-exporter/deploy/daemonSet.yaml
@@ -117,6 +117,8 @@ spec:
       securityContext:
         runAsNonRoot: true
         runAsUser: 65534
+        seccompProfile:
+          type: RuntimeDefault
       serviceAccountName: node-exporter
       tolerations:
       - operator: Exists
