--- a/apps/base/monitoring-prometheus-operator/deploy/operator/deployment.yaml
+++ b/apps/base/monitoring-prometheus-operator/deploy/operator/deployment.yaml
@@ -85,4 +85,6 @@ spec:
       securityContext:
         runAsNonRoot: true
         runAsUser: 65534
+        seccompProfile:
+          type: RuntimeDefault
       serviceAccountName: prometheus-operator
