--- a/apps/base/monitoring-prometheus-operator/deploy/prometheus/prometheus.yaml
+++ b/apps/base/monitoring-prometheus-operator/deploy/prometheus/prometheus.yaml
@@ -45,6 +45,8 @@ spec:
     # TODO : readOnlyRootFilesystem is present in the CRD, but it doesn't get injected at the container level
     # I guess this section is only applied at the POD level.
     #readOnlyRootFilesystem: true
+    seccompProfile:
+      type: RuntimeDefault
   serviceAccountName: prometheus-k8s
   serviceMonitorNamespaceSelector: {}
   serviceMonitorSelector: {}
