--- a/apps/base/tool-miniflux/deploy/miniflux/deployment.yaml
+++ b/apps/base/tool-miniflux/deploy/miniflux/deployment.yaml
@@ -17,6 +17,13 @@ spec:
         app.kubernetes.io/name: miniflux
         app.kubernetes.io/component: web
     spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 65534 # nobody
+        fsGroup: 65534
+        fsGroupChangePolicy: "OnRootMismatch"
+        seccompProfile:
+          type: RuntimeDefault
       initContainers:
       - name: wait-for-requirements
         image: "registry.lan/miniflux-busybox:1.36.0"
@@ -35,6 +42,12 @@ spec:
             echo "FAILED : PostgreSQL DB Server isn't available"
             exit 1
           fi
+        securityContext:
+          readOnlyRootFilesystem: true
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+              - ALL
       containers:
       - name: miniflux
         image: "registry.lan/miniflux:2.0.43-distroless"
@@ -48,9 +61,11 @@ spec:
         - containerPort: 8080
           name: http
         securityContext:
-          runAsNonRoot: true
-          runAsUser: 65534 # nobody
           readOnlyRootFilesystem: true
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+              - ALL
         readinessProbe:
           exec:
             command:
