--- a/apps/base/tool-miniflux/deploy/namespace.yaml
+++ b/apps/base/tool-miniflux/deploy/namespace.yaml
@@ -2,3 +2,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: tool-miniflux
+  labels:
+    pod-security.kubernetes.io/enforce: restricted
+    pod-security.kubernetes.io/audit: restricted
+    pod-security.kubernetes.io/warn: restricted
+
