--- a/apps/base/tool-syncthing/deploy/discovery/statefulSet.yaml
+++ b/apps/base/tool-syncthing/deploy/discovery/statefulSet.yaml
@@ -15,19 +15,13 @@ spec:
         app.kubernetes.io/name: syncthing
         app.kubernetes.io/component: discovery
     spec:
-      initContainers:
-      - name: create-folders
-        image: "registry.lan/syncthing-busybox:1.36.0"
-        imagePullPolicy: IfNotPresent
-        command:
-          - "sh"
-          - "-c"
-          - |
-            mkdir -p /data/stdiscosrv
-            chown 1000:1000 /data/stdiscosrv
-        volumeMounts:
-        - name: discovery-data
-          mountPath: /data
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1000
+        fsGroup: 1000
+        fsGroupChangePolicy: "OnRootMismatch"
+        seccompProfile:
+          type: RuntimeDefault
       containers:
       - name: discovery
         image: "registry.lan/syncthing-discosrv:1.18.6"
@@ -45,9 +39,11 @@ spec:
         - containerPort: 8081
           name: metrics
         securityContext:
-          runAsNonRoot: true
-          runAsUser: 1000
           readOnlyRootFilesystem: true
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+              - ALL
         readinessProbe:
           httpGet:
             scheme: HTTP
