--- a/apps/base/dev-argo-tasks/deploy/events/eventbus.yaml
+++ b/apps/base/dev-argo-tasks/deploy/events/eventbus.yaml
@@ -3,9 +3,25 @@ kind: EventBus
 metadata:
   name: default
 spec:
+  # Default jetsteam values can be found with: kubectl --namespace dev-argo-events get configmap argo-events-controller-config -o yaml
   jetstream:
     version: 2.9.12
+    # Optional, defaults to 3. If it is < 3, set it to 3, that is the minimal requirement.
     replicas: 3
+    settings: |
+      # https://docs.nats.io/running-a-nats-service/configuration#jetstream
+      # Only configure "max_memory_store" or "max_file_store", do not set "store_dir" as it has been hardcoded.
+      # e.g. 1G. -1 means no limit, up to 75% of available memory
+      max_memory_store: 32M
+      # e.g. 20G. -1 means no limit, Up to 1TB if available
+      max_file_store: 1G
+    streamConfig: |
+      # The default properties of the streams to be created in this JetStream service
+      maxMsgs: 100
+      maxAge: 2h
+      maxBytes: -1
+      replicas: 3
+      duplicates: 30s
     containerTemplate:
       resources:
         requests:
