--- a/apps/base/dev-argo-workflows/deploy/patches/argo-server-deployment.yaml
+++ b/apps/base/dev-argo-workflows/deploy/patches/argo-server-deployment.yaml
@@ -20,6 +20,7 @@ spec:
           args: 
             - server
             - --auth-mode=server
+            - --namespaced
           securityContext:
             seccompProfile:
               type: RuntimeDefault
