--- a/apps/base/cluster-multus/deploy/kustomization.yaml
+++ b/apps/base/cluster-multus/deploy/kustomization.yaml
@@ -18,6 +18,6 @@ resources:
 - k8s-bridge.yaml
 
 images:
- - name: ghcr.io/k8snetworkplumbingwg/multus-cni:stable
+ - name: ghcr.io/k8snetworkplumbingwg/multus-cni:snapshot
    newName: ghcr.io/k8snetworkplumbingwg/multus-cni
-   newTag: v3.9.3
+   newTag: v4.0.2
