--- a/apps/base/cluster-reloader/deploy/patches/deployment.yaml
+++ b/apps/base/cluster-reloader/deploy/patches/deployment.yaml
@@ -1,28 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: reloader
+  name: reloader-reloader
 spec:
-  replicas: 1
-  revisionHistoryLimit: 2
-  selector:
-    matchLabels:
-      app.kubernetes.io/name: reloader
-      app.kubernetes.io/component: reloader
   template:
-    metadata:
-      labels:
-        app.kubernetes.io/name: reloader
-        app.kubernetes.io/component: reloader
     spec:
       containers:
-      - name: reloader
-        image: "registry.lan/reloader:v1.0.18"
-        imagePullPolicy: IfNotPresent
+      - name: reloader-reloader
         securityContext:
           runAsNonRoot: true
-          runAsUser: 1000
-          runAsGroup: 1000
+          runAsUser: 65534
+          runAsGroup: 65534
           readOnlyRootFilesystem: true
           allowPrivilegeEscalation: false
           seccompProfile:
@@ -46,8 +34,8 @@ spec:
       - name: cluster-config
         configMap:
           name: cluster-config
-      serviceAccountName: reloader
       imagePullSecrets:
       - name: docker-config
       nodeSelector:
         capability/general-purpose: 'yes'
+
