--- a/apps/base/cluster-reloader/deploy/manifests/clusterrole.yaml
+++ b/apps/base/cluster-reloader/deploy/manifests/clusterrole.yaml
@@ -1,7 +1,19 @@
+---
+# Source: reloader/templates/clusterrole.yaml
 apiVersion: rbac.authorization.k8s.io/v1
+
 kind: ClusterRole
 metadata:
-  name: reloader-role
+  annotations:
+    meta.helm.sh/release-namespace: "default"
+    meta.helm.sh/release-name: "reloader"
+  labels:
+    app: reloader-reloader
+    chart: "reloader-1.0.39"
+    release: "reloader"
+    heritage: "Helm"
+    app.kubernetes.io/managed-by: "Helm"
+  name: reloader-reloader-role
 rules:
   - apiGroups:
       - ""
@@ -32,4 +44,11 @@ rules:
       - list
       - get
       - update
+      - patch
+  - apiGroups:
+      - ""
+    resources:
+      - events
+    verbs:
+      - create
       - patch
