--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-cluster-reloader.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-cluster-reloader.yaml
@@ -1,8 +1,8 @@
 watchers:
   - type: docker_registry
-    repo: registry-1.docker.io
+    repo: ghcr.io
     image: stakater/reloader
-    tag: v1.0.18
+    tag: v1.0.39
     includes:
       - v[0-9]+\.[0-9]+\.[0-9]+
     excludes:
@@ -11,3 +11,5 @@ watchers:
       - dev
       - v0\.
       - v1\.0\.[0-9]$
+      - v1\.0\.[0-2][0-9]$
+      - v1\.0\.3[0-8]$
