--- a/apps/base/dev-argo-events/deploy/manifests/base/controller-manager/controller-config.yaml
+++ b/apps/base/dev-argo-events/deploy/manifests/base/controller-manager/controller-config.yaml
@@ -28,7 +28,7 @@ data:
           duplicates: 300s
         versions:
         - version: latest
-          natsImage: nats:2.9.12
+          natsImage: nats:2.9.16
           metricsExporterImage: natsio/prometheus-nats-exporter:0.9.1
           configReloaderImage: natsio/nats-server-config-reloader:0.7.0
           startCommand: /nats-server
@@ -59,6 +59,11 @@ data:
           startCommand: /nats-server
         - version: 2.9.12
           natsImage: nats:2.9.12
+          metricsExporterImage: natsio/prometheus-nats-exporter:0.9.1
+          configReloaderImage: natsio/nats-server-config-reloader:0.7.0
+          startCommand: /nats-server
+        - version: 2.9.16
+          natsImage: nats:2.9.16
           metricsExporterImage: natsio/prometheus-nats-exporter:0.9.1
           configReloaderImage: natsio/nats-server-config-reloader:0.7.0
           startCommand: /nats-server
