--- a/apps/base/dev-argo-events/deploy/manifests/base/kustomization.yaml
+++ b/apps/base/dev-argo-events/deploy/manifests/base/kustomization.yaml
@@ -6,16 +6,16 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - crds
-  - argo-events-sa.yaml
-  - controller-manager
+- crds
+- argo-events-sa.yaml
+- controller-manager
 
 images:
-  - name: quay.io/argoproj/argo-events
-    newTag: v1.8.0
+- name: quay.io/argoproj/argo-events
+  newTag: v1.8.1
 
-patchesStrategicMerge:
-  - |-
+patches:
+- patch: |-
     apiVersion: apps/v1
     kind: Deployment
     metadata:
@@ -27,4 +27,4 @@ patchesStrategicMerge:
             - name: controller-manager
               env:
                 - name: ARGO_EVENTS_IMAGE
-                  value: quay.io/argoproj/argo-events:v1.8.0
+                  value: quay.io/argoproj/argo-events:v1.8.1
