--- a/apps/base/monitoring-release-watcher/deploy/kustomization.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/kustomization.yaml
@@ -31,6 +31,7 @@ configMapGenerator:
   - config/watchers/app-cluster-reloader.yaml
   - config/watchers/app-dev-argo-cd.yaml
   - config/watchers/app-dev-argo-events.yaml
+  - config/watchers/app-dev-argo-tasks.yaml
   - config/watchers/app-dev-gitea.yaml
   - config/watchers/app-download-deluge.yaml
   - config/watchers/app-download-sabnzbd.yaml
