--- a/apps/vagrant/dev-argo-tasks/deploy/templates/app-build-and-deploy.yaml
+++ b/apps/vagrant/dev-argo-tasks/deploy/templates/app-build-and-deploy.yaml
@@ -107,7 +107,7 @@ spec:
               name: git-credentials
               key: gitea_password
       script:
-        image: registry.lan/template-source-fetcher:v2-3.11.3-alpine3.17-1
+        image: registry.lan/template-source-fetcher:v2-3.11.5-alpine3.18
         command: [bash]
         source: |
           set -euo pipefail
@@ -136,7 +136,7 @@ spec:
         parameters:
         - name: app_name
       script:
-        image: registry.lan/template-source-fetcher:v2-3.11.3-alpine3.17-1
+        image: registry.lan/template-source-fetcher:v2-3.11.5-alpine3.18
         command: [bash]
         source: |
           set -euo pipefail
@@ -179,7 +179,7 @@ spec:
           path: /source/apps/base
       initContainers:
       - name: create-volume
-        image: registry.lan/kaniko-image-builder:v1.9.2-debug
+        image: registry.lan/kaniko-image-builder:v1.15.0-debug
         command:
         - "sh"
         - "-c"
@@ -198,7 +198,7 @@ spec:
         - name: tmp
           mountPath: /tmp
       container:
-        image: registry.lan/kaniko-image-builder:v1.9.2-debug
+        image: registry.lan/kaniko-image-builder:v1.15.0-debug
         command: ["/kaniko/executor"]
         args:
           - --cache
