--- a/apps/base/monitoring-release-watcher/deploy/kustomization.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/kustomization.yaml
@@ -34,6 +34,7 @@ configMapGenerator:
   - config/watchers/app-dev-argo-tasks.yaml
   - config/watchers/app-dev-argo-workflow.yaml
   - config/watchers/app-dev-gitea.yaml
+  - config/watchers/app-dev-minio.yaml
   - config/watchers/app-download-deluge.yaml
   - config/watchers/app-download-sabnzbd.yaml
   - config/watchers/app-download-sickchill.yaml
