--- a/apps/base/download-sabnzbd/deploy/statefulSet.yaml
+++ b/apps/base/download-sabnzbd/deploy/statefulSet.yaml
@@ -24,7 +24,7 @@ spec:
           type: RuntimeDefault
       initContainers:
       - name: create-folders
-        image: "registry.lan/sabnzbd:3.7.2-3.11.2-slim-bullseye"
+        image: "registry.lan/sabnzbd:3.7.2-3.11.5-slim-bookworm"
         imagePullPolicy: IfNotPresent
         command:
           - "sh"
@@ -42,7 +42,7 @@ spec:
           mountPath: /opt/sabnzbd
       containers:
       - name: sabnzbd
-        image: "registry.lan/sabnzbd:3.7.2-3.11.2-slim-bullseye"
+        image: "registry.lan/sabnzbd:3.7.2-3.11.5-slim-bookworm"
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
