--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-download-sickchill.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-download-sickchill.yaml
@@ -3,13 +3,13 @@ watchers:
     type: docker_registry
     repo: registry-1.docker.io
     image: library/python
-    tag: 3.11.2-slim-bullseye
+    tag: 3.11.5-slim-bookworm
     includes:
-      - 3\.[0-9]+\.[0-9]+-slim-bullseye
+      - ^[0-9]+\.[0-9]+\.[0-9]+-slim-bookworm
     excludes:
-      - ^3\.[0-9]\..*
-      - ^3\.10\..*
-      - ^3\.11\.[0]-.*
+      - ^2\.
+      - ^3\.[0-9]\.
+      - ^3\.10\.
   - type: pypi
     package: sickchill
-    version: 2023.1.2
+    version: 2023.6.27
