--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-home-home-assistant.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-home-home-assistant.yaml
@@ -1,8 +1,8 @@
 watchers:
   - type: docker_registry
-    repo: registry-1.docker.io
-    image: homeassistant/home-assistant
-    tag: 2023.3.6
+    repo: ghcr.io
+    image: home-assistant/home-assistant
+    tag: 2023.8.4
     includes:
       - ^[0-9][0-9][0-9][0-9]\.[0-9]+\.[0-9]+.*
     excludes:
@@ -10,16 +10,16 @@ watchers:
       - .*b[0-9]
       - (latest|stable|beta|dev|rc)
       - ^202[0-2]\..*
-      - ^2023\.[0-2]\..*
+      - ^2023\.[0-7]\..*
   - type: github_commit
-    repo: efficiosoft/ldap-auth-sh
+    repo: bob1de/ldap-auth-sh
     branch: master
     commit: 819f9233116e68b5af5a5f45167bcbb4ed412ed4
   - name: "HomeAssistant MySQL"
     type: docker_registry
     repo: registry-1.docker.io
     image: library/mysql
-    tag: 8.0.32-debian
+    tag: 8.0.34-debian
     includes:
       - ^[0-9]\.[0-9]+\.[0-9]+-debian
     excludes:
@@ -27,4 +27,4 @@ watchers:
       - ^[0-7]\..*
       - ^8\.0\.[0-9]-debian$
       - ^8\.0\.[1-2][0-9]-debian$
-      - ^8\.0\.3[0]-debian$
+      - ^8\.0\.3[0-3]-debian$
