--- a/apps/vagrant/home-homeassistant/deploy/secret/homeassistant/bootstrap/secrets.yaml
+++ b/apps/vagrant/home-homeassistant/deploy/secret/homeassistant/bootstrap/secrets.yaml
@@ -1,16 +1,13 @@
-#ENC[AES256_GCM,data:FMl3tISt9HpUHylI1eNEaqC1+b+AQfxc0HMOwEkfYc8flhjTN2/tJlUUnCVWr35/FEsyDAJB2v76WLxJ2A==,iv:+982A2e19oFnRDUgth5oODiIdkgMKY+IvbsWZL5D0Vs=,tag:SUDI68BSynkSfhPHz8oC1A==,type:comment]
-#ENC[AES256_GCM,data:E740GIk87Hs+p4aHtxz4CAujuoV5pFckGVG3LKaEklGGBnd8NQVeZAgp3Qo6fMmzd8Pe4iMp4t4Nj88CpctOrrVo17M=,iv:pFLjGGa89JVkS2uivVufJBlKlTOm6H2cQ8gUR+fRvF0=,tag:JIW9EX+We+G+lAtLIo4GRg==,type:comment]
-recorder_mysql_url: ENC[AES256_GCM,data:dmxINZBDAxeN7l0HeNs6MWK0a1Ulk1U+uKwNZO7uzIdu8CeRs4vefTK2aBZ3GC76KB0S5F6X6Ay4NBE735sjytrgKaqVyTqlqqf9vaM=,iv:G+efZEyndeXyiDIeOmp2vpxhFjYjpP8p8iHxcwkK7ww=,tag:q0tXs8sLoSJBsHGKW94MPg==,type:str]
-#ENC[AES256_GCM,data:4juR0PcgKgY8zIxnKAoty48=,iv:hCE5sBTiyHItslYe0VzqrtdUBM4jc865GM7+Nn1//YI=,tag:11GACueSSjmnbfcZ9uNq6w==,type:comment]
-mqtt_username: ENC[AES256_GCM,data:198nCg==,iv:+QzwqRLzQ+fIVHw4y8qUHZAsuu5GC9OreMtzG3mX0mk=,tag:Z1jnbCnsEQAE1aqx4bu5Ow==,type:str]
-mqtt_password: ENC[AES256_GCM,data:l7QVfDytuI8=,iv:87MYKEJZEnLLprNrCQyUoLuu0e8mkaU0oMOBK9Ukwqs=,tag:ioI4gLRpVUELEVO8Wq9wOw==,type:str]
-#ENC[AES256_GCM,data:id4C3aV4XxNBuanuAnAAAeo=,iv:pCor6Eq0aSv9k6YIs5xdj7VMPTcIrW+poC4dedH9ojI=,tag:k7iVFRckBnSm0KVSM2qQoQ==,type:comment]
-smtp_username: ENC[AES256_GCM,data:n5eCUA==,iv:Rp2gPO+yPANqd4m+sRBlQXPMQ448BzRBUng3dmwkVeY=,tag:J766vDQd7HISzA8PUulR3w==,type:str]
-smtp_password: ENC[AES256_GCM,data:NrR2CH1SdxE=,iv:cR2hoyFVCN29mT5DdIK6r2A1+SOFHNQCiEKy8X1sscY=,tag:SI2LQo9QepeEZmbbW7NGJg==,type:str]
-smtp_recipient_user: ENC[AES256_GCM,data:HsXrYonwQEQ6+6RQHg==,iv:ZvD1F5QOAL19X0YvDKKh+KkYmnZpZJIRHhrzfgp9Ye0=,tag:vPUcCE7fT6k/P9LamPQYpA==,type:str]
-#ENC[AES256_GCM,data:c11yrPM=,iv:Z/5RaKxP6NvWs5Nh8p/gce2OBId+xrJ5Rs2ARJDVp1A=,tag:g6rY3DtS01p+nCcJDifyuA==,type:comment]
-ntfy_username: ENC[AES256_GCM,data:HetEZKAZLDbViom9Ag==,iv:L08w3CprdRNido2tkmlhkBiqbspFv4+xS4KLTt1S6a8=,tag:LGVPYd3iLt/TR0NP33K5/Q==,type:str]
-ntfy_password: ENC[AES256_GCM,data:jBb3jo1V2N8=,iv:26CuqVKuqOzEhW+cIITDIW/61vjQD3cJYkMGpOErPTY=,tag:IPVYA3VP1UR1fRvfeHX+Sg==,type:str]
+#ENC[AES256_GCM,data:dYpI8xdF0E2oVuk89uKSR3n8OoKgALLiLHL0tPQgBsKkyE1iuahu5+roFXP4kpZzg+BlhFwHOh23U7rzWg==,iv:8gtWT0nBN2hH8PJPPe2IgsGw7azRLd6zjxDEI03Mncw=,tag:PtjoahJF4iXmRE9yIRvHKQ==,type:comment]
+#ENC[AES256_GCM,data:7cMGldWTPnaewzc0Z7CA3kWluMcLCecTwdGp+YRmIxkiX9zBbXGCsJZNvzOyXbv2AxSlmydaAkDVlzeZsbn16IQM2+U=,iv:EbWNSz72CMBDiO9hODGgZOeyFDXfBbunRltkH5gSmD0=,tag:66lHVDyyIIPguB2v2afxBg==,type:comment]
+recorder_mysql_url: ENC[AES256_GCM,data:3PSZONWc5nt/CzPACleiia5IgQj/2JFYQetl+/8wM4GCTnxqrZNNiQdTxPTRTg5ViKezoA6o/Ds39hVARnQrlWgliAPYSRIuHK9+2gE=,iv:ElpcBjdUijXIIq7msAhYvmiLJ9ZIcJuPITqE+GQxJH8=,tag:2miQYv26wyNxqB9oPvzHIw==,type:str]
+#ENC[AES256_GCM,data:Xq3yCRuX4Io9WekQkTrDrJs=,iv:2K3Kh2caGi04WPt7SEyVo1hgPMV5nsKDg7bbcVrWpPY=,tag:E3JS8r7GeWG17+P9t7LPgg==,type:comment]
+smtp_username: ENC[AES256_GCM,data:KAymfg==,iv:DnmO3YXbmqxT0JI13+U9+UPV1n0O+6GiR9woVaENhYg=,tag:B+oN2B8Lqgnb4j/kmivcSA==,type:str]
+smtp_password: ENC[AES256_GCM,data:mxXk1COacO0=,iv:k8CtyPtFkGjFWER5dE2fOchNAFjqYe7P5wzfy17edqI=,tag:U+HAF2ZW2C0X5draOAHUbQ==,type:str]
+smtp_recipient_user: ENC[AES256_GCM,data:L3eImKuGO354Sm+5MA==,iv:AoYY8CHPiiEKoL1Tc08ziVDW/hlG+nQEu0spDkWE73M=,tag:VexWtsiLglEmNsdCGrrPYg==,type:str]
+#ENC[AES256_GCM,data:RAlNKHU=,iv:RS6YxjHR3d0fqMkrEq+ckPZLtP7T72TOTwFr8zzP9Yc=,tag:aj80VVIo8vAzT8x7+vsZWw==,type:comment]
+ntfy_username: ENC[AES256_GCM,data:9GP13V4rU4zuDCsniA==,iv:EMo3Ibs7CAFRAa0mB3s55v3aeIIxymHFSk5YlH0+S8M=,tag:DzeLDQlYqncjKSJKIAB2TA==,type:str]
+ntfy_password: ENC[AES256_GCM,data:Z0DtzUKoMXE=,iv:QYseiNicf5VtaXah6h+y2wuE5gHEJS+Z+SmkrVlUtIE=,tag:QSHOp1Xrw/CLMTT+uq9xJA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -20,14 +17,14 @@ sops:
         - recipient: age1ykc9cp7e7sylr09ldufwd337h6kvghn8ga250unudvxxlaczpuzsv04rqn
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFRlZzZFM0ZURweGU1YW1i
-            bXlpeGc1WFB0amE0ODhsZDlWUHpGZER3ZkJJCnpscjVBUjcvQ1VCdWVpcHR4aUJi
-            TUtkd3pNei9VWHZhUWdJRmRhM09WMlkKLS0tIDBmN3luL3dwdVEwQWVJdElBNk05
-            NFpNaXpjalNvWUh1Szl5YnpOdHBGSjgKjmY0dH73FskikC4EYbFhpxdCn4YxlzN9
-            KkfTmyI53Ty1uM6XOXAX7NfO9D0UbXrihX6qOI7OLJ0VpRbUf5MMlA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2c1FoazlSeit3MFZCZURn
+            S3pZTm12VnN6M3NjS296WkRuWCs4UytyWEEwClo3cjRndE5iMkpzb09FdmxJZGln
+            TkZCNTNUQ1kxNEFhTHFzZ1hrREFKSDQKLS0tIGkzN2R2bHBaYitvRlkvbisxRnB2
+            dEcvaEZ1MjJsN0FYUFVaM3pORVgzYlEKm5RjmzPpfcMSj6R91lXk2VqoQNy0WYYy
+            3+xwZ7Y8ss8qOEmrxFzDr6xZXQH+sJ4eB/uTzhD6XBiwoTza56aBZw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-06-23T14:00:16Z"
-    mac: ENC[AES256_GCM,data:954uJqCLAw0WQb8t5EDmTpgQ6+AQMbaV6xHeyVkb6zBSwwgaQQY7zgwKog6fWA4zXazm19sAvrsXNsoP2Gzdge7c7ZqSwQJt5AE4ZPJFqokaCXd5/vmyyV7S0fdncQVxYqdmFo8Bsy/Yuuxydzg7WPRM0hbJKqFX8/YJSSwgOFs=,iv:Qe/VYXvtkQzBCV1JYZH/hW8RuzOGw60sZ5G5LjovieI=,tag:dBVQ05yfg/rPpmx54wNipw==,type:str]
+    lastmodified: "2023-09-03T21:11:54Z"
+    mac: ENC[AES256_GCM,data:NX/TnoA7oRJ/pHUtyUcsdN+bjWRr4yXiMPXQn8LS19be8YMOXLIPTv3KBzL5ZeZ+2jbvsyEhPtKb97mjLqHKVhpXCaAyGE9I0GUCu/mlzUdbIuiTw69dY4aro8lPoxyd2aOYYlQCBqKczw4bAhli23MT0/f/TWU22CQknG0xjuE=,iv:yRp3qWy+tYEGVFjQMlFH5ubM2j5L83rn6bxUl7Iqh+U=,tag:vL6zV94PAZsOf8dz4hRxyA==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.7.3
