--- a/apps/base/home-nodered/deploy/kustomization.yaml
+++ b/apps/base/home-nodered/deploy/kustomization.yaml
@@ -8,7 +8,7 @@ labels:
     pairs:
       app.kubernetes.io/name: nodered
       app.kubernetes.io/component: nodered
-      app.kubernetes.io/version: 3.0.2-18-minimal-custom
+      app.kubernetes.io/version: 3.0.2-18-minimal-custom-2
 
 generatorOptions:
  disableNameSuffixHash: true
