--- a/apps/base/home-zigbee2mqtt/deploy/statefulSet.yaml
+++ b/apps/base/home-zigbee2mqtt/deploy/statefulSet.yaml
@@ -25,13 +25,18 @@ spec:
           type: RuntimeDefault
       initContainers:
       - name: create-folders
-        image: "registry.lan/zigbee2mqtt:1.30.3"
+        image: "registry.lan/zigbee2mqtt:1.33.0"
         imagePullPolicy: IfNotPresent
         command:
           - "sh"
           - "-c"
           - |
-            mkdir -p /app/data
+            mkdir -p /mount/app/data
+
+            if [ ! -f /mount/app/data/configuration.yaml ] ; then
+              echo "Deploying default configuration"
+              cp /app/configuration.yaml /mount/app/data/configuration.yaml
+            fi
         securityContext:
           readOnlyRootFilesystem: true
           allowPrivilegeEscalation: false
@@ -40,10 +45,10 @@ spec:
               - ALL
         volumeMounts:
         - name: zigbee2mqtt-data
-          mountPath: /app
+          mountPath: /mount/app
       containers:
       - name: zigbee2mqtt
-        image: "registry.lan/zigbee2mqtt:1.30.3"
+        image: "registry.lan/zigbee2mqtt:1.33.0"
         imagePullPolicy: IfNotPresent
         envFrom:
         - configMapRef:
